--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "hls.js": "^1.6.2",
     "mediasoup-client": "^3.11.0",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "socket.io-client": "^4.8.1",
+    "stream-browserify": "^3.0.0",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
